Prod-EU/force-app/main/default/objects/Email_Invoice_Automation__mdt/Email_Invoice_Automation__mdt.object-meta.xml
<CustomObject>
    <description>Email S-doc Invoice Automation</description>
    <label>Email Invoice Automation</label>
    <pluralLabel>Email Invoice Automation</pluralLabel>
</CustomObject>