Prod-EU/force-app/main/default/objects/Email_Invoice_Automation__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country Code</description>
    <label>Country Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>