Prod-EU/force-app/main/default/objects/Email_Invoice_Automation__mdt/fields/HTML_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>HTML_Template_Name__c</fullName>
    <description>HTML Template Name</description>
    <label>HTML Template Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>