Prod-EU/force-app/main/default/objects/Email_Invoice_Automation__mdt/fields/Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Name__c</fullName>
    <label>Invoice Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>