Prod-EU/force-app/main/default/objects/Email_Invoice_Automation__mdt/fields/Key_Field__c.field-meta.xml
<CustomField>
    <fullName>Key_Field__c</fullName>
    <description>Key Field</description>
    <label>Key Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>