Prod-EU/force-app/main/default/objects/Email_Invoice_Automation__mdt/fields/Key_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Key_Field_Value__c</fullName>
    <label>Key Field Value</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>